--- a/static/index.html
+++ b/static/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE HTML>
-<html ng-app="demoapp" style="width:100%; height:100%;">
+<html ng-app="giv2railapp" style="width:100%; height:100%;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/leaflet.css">
     <link rel="stylesheet" href="css/leaflet.label.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <script src="js/leaflet.js"></script>
     <script src="js/leaflet.label.js"></script>
   	<script src="js/angular.min.js"></script>
   	<script src="js/angular-leaflet-directive.min.js"></script>
     <script src='js/app.js'></script>
     <script src="js/stomp.js"></script>
-    <title>GIVARAIL</title>
+    <title>GIV2RAIL</title>
   </head>
-  <body ng-controller="ejemploController" style="width:100%; height:100%;  margin: 0px; padding: 0px;">
+  <body ng-controller="giv2railController" style="width:100%; height:100%;  margin: 0px; padding: 0px;">
+    <div id="sombra">
+     <img src="img/realtime.png"/>
+     <img src="img/historico.png"/>
+    </div>
   	<leaflet markers="markers" center="center" style="width:100%; height:100%"></leaflet>
-  	
+  	<div id="divPowered" style="position:absolute;bottom:15px;right:5px; z-index: 998;">
+      <label>Patrocinado por </label>
+      <img src="img/caf.png" style="width:130px;">
+      <img src="img/deustotech.png" style="width:130px;">
+    </div>
   </body>
 
 </html>
