--- a/static/loginmodal.html
+++ b/static/loginmodal.html
@@ -2,7 +2,7 @@
       <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header" align="center">
-          <img class="img-circle" id="img_logo" src="img/deustotech.png">
+          <img class="img-circle" id="img_logo" src="img/deustotech.png"/>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
           </button>
@@ -18,8 +18,8 @@
                                 <div id="icon-login-msg" class="glyphicon glyphicon-chevron-right"></div>
                                 <span id="text-login-msg">Escribe tu usuario y contraseña</span>
                             </div>
-                <input id="login_username" class="form-control" ng-model="footer" type="text" placeholder="Usuario" required>
-                <input id="login_password" class="form-control" ng-model="contrasena" type="password" placeholder="Contraseña" required>
+                <input id="login_username" class="form-control" data-ng-model="mydata.usuario" type="text" placeholder="Usuario" required>
+                <input id="login_password" class="form-control" data-ng-model="mydata.contrasena" type="password" placeholder="Contraseña" required>
                             <div class="checkbox">
                                 <label>
                                     <!--<input type="checkbox"> Remember me-->
@@ -28,7 +28,7 @@
                   </div>
                 <div class="modal-footer">
                             <div>
-                                <button data-ng-click="callbackbuttonright(); $event.stopPropagation()" class="btn btn-primary btn-lg btn-block">Conectarse</button>
+                                <button type="submit" class="btn btn-primary btn-lg btn-block">Conectarse</button>
                             </div>
                   <div>
                                <!-- <button id="login_lost_btn" type="button" class="btn btn-link">Lost Password?</button>
