--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
 
     
     <!--<script src="js/giv2rail.js"></script>-->
-    <title>GIV2RAIL</title>
+    <title>GIVARAIL</title>
   </head>
   <body ng-controller="giv2railController" style="width:100%; height:100%;  margin: 0px; padding: 0px;">
         <div id="sombra">
@@ -43,7 +43,6 @@
           <leaflet paths="lineas" defaults="defaults" markers="markers" center="center" style="width:100%; height:100%"></leaflet>
           <div id="divPowered" style="position:absolute;bottom:15px;right:5px; z-index: 998;">
             <label>Powered by </label>
-            <img src="img/caf.png" style="width:130px;">
             <img src="img/deustotech.png" style="width:130px;">
           </div>
   </body>
@@ -85,7 +84,7 @@
   </div>
   <div id="divLogin">
         <div id="divInfoInicio">
-          <img src="img/deustotech.png" style="width: 180px; float: left; margin-left: 150px;">
+          <img src="img/elkartek.gif" style="width: 300px; float: left; margin-left: 150px;">
           <h1 style="text-align: left; margin-top: 10px; margin-bottom: 30px; margin-left: 350px;">GIVARAIL</h1>
           <p>El objetivo principal del proyecto GIVARAIL es investigar en la fusión de tecnologías de posicionamiento (GNSS e INS) y visión artificial para conseguir una conducción automática más segura, eficiente y precisa de los vehículos ferroviarios, que redundará en una mayor rentabilidad de los proyectos integrales ferroviarios.</p>
         </div>
