--- a/static/index.html
+++ b/static/index.html
@@ -36,10 +36,19 @@
     <title>GIVARAIL</title>
   </head>
   <body ng-controller="giv2railController" style="width:100%; height:100%;  margin: 0px; padding: 0px;">
-        <div id="sombra">
-           <img id="tiempoReal" ng-click="activarTiempoReal()" title="Tiempo Real" src="img/realtime.png"/>
-           <img id="historico" title="Histórico" src="img/historico.png"/>
+        <div id="divMenu">
+          <div class="divSeccion">
+          <div class="divHeader">
+            <h4>Controles de tiempo real y búsqueda</h4>
           </div>
+            <button type="button" class="btn" ng-click="activarTiempoReal()" id="botRealTime">
+              <img class="imgBoton" id="tiempoReal" title="Tiempo Real" src="img/realtime.png"/>
+            </button>
+            <button type="button" class="btn" id="historico">
+              <img class="imgBoton" title="Histórico" src="img/historico.png"/>
+            </button>
+          </div>
+        </div>
           <leaflet paths="lineas" defaults="defaults" markers="markers" center="center" style="width:100%; height:100%"></leaflet>
           <div id="divPowered" style="position:absolute;bottom:15px;right:5px; z-index: 998;">
             <label>Powered by </label>
@@ -84,10 +93,9 @@
   </div>
   <div id="divLogin">
         <div id="divInfoInicio">
-          <img src="img/elkartek.gif" style="width: 300px; float: left; margin-left: 150px;">
-          <h1 style="text-align: left; margin-top: 10px; margin-bottom: 30px; margin-left: 350px;">GIVARAIL</h1>
+          <img src="img/elkartek.jpg" style="width: 300px; display: block; margin-left: auto; margin-right: auto;">
+          <br/><h2 style="text-align: center; margin-top: 10px; margin-bottom: 30px;">GIVARAIL</h2>
           <p>El objetivo principal del proyecto GIVARAIL es investigar en la fusión de tecnologías de posicionamiento (GNSS e INS) y visión artificial para conseguir una conducción automática más segura, eficiente y precisa de los vehículos ferroviarios, que redundará en una mayor rentabilidad de los proyectos integrales ferroviarios.</p>
-        </div>
         <div id="formLogin" style="top:440px;">
           <label>GIVARAIL</label>
           <input type="text" ng-model="usuariologin" class="form-control" id="inputUsuario" placeholder="Username">
