--- a/static/index.html
+++ b/static/index.html
@@ -29,8 +29,8 @@
     <script src="js/thread.js"></script>
     <script src="js/jquery.fileDownload.js"></script>
     <script src="js/ui-bootstrap-tpls-0.9.0.js"></script>
-    
-
+    <script src="js/Blob.js"></script>
+    <script src="js/FileSaver.min.js"></script>
     
     <!--<script src="js/giv2rail.js"></script>-->
     <title>GIVARAIL</title>
