--- a/static/index.html
+++ b/static/index.html
@@ -49,7 +49,7 @@
             </button>
           </div>
         </div>
-          <leaflet event-broadcast="events" paths="lineas" defaults="defaults" markers="markers" center="center" style="width:100%; height:100%"></leaflet>
+          <leaflet id="mapa" event-broadcast="events" paths="lineas" defaults="defaults" markers="markers" center="center" style="width:100%; height:100%"></leaflet>
           <div id="divPowered" style="position:absolute;bottom:15px;right:5px; z-index: 998;">
             <label>Powered by </label>
             <img src="img/deustotech.png" style="width:200px;">
